# ubrato-back

./: .dockerignore  .env.exmaple  .env.prod  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Makefile  docker-compose.yml  flake.nix  pyproject.toml  test.py  typesense-config.json
app/: config.py  exceptions.py  localization.toml  main.py
app/broker/: __init__.py  nats.py  topic.py
app/configs/: config.py  database.py
app/models/: __init__.py  city.py  object_group.py  organization.py  questionnaire_answer.py  service_group.py  tender.py  tender_model.py  user.py  user_model.py
app/repositories/: __init__.py  cities.py  database.py  exceptions.py  logs.py  logs_repository.py  organization.py  organization_repository.py  schemas.py  session.py  session_repository.py  tags.py  tags_repository.py  tender.py  tender_repository.py  user.py  user_repository.py  user_schema.py
app/repositories/migration/: 000001_init_mg.down.sql  000001_init_mg.up.sql  000002_data_mg.up.sql  1710349043_create_users_table.up.sql  1710349206_create_organiztions_table.up.sql  1710349305_create_documents_table.up.sql  1710349476_create_tender_table.down.sql  1710349476_create_tender_table.up.sql  1710349538_create_logs_table.up.sql  1712141342_create_cities_table.up.sql  1712142599_regions_data_mg.up.sql  1712143741_create_tenders_tags_table.down.sql  1712144291_create_tender_table.down.sql  1712144291_create_tender_table.up.sql
app/repositories/postgres/: __init__.py  cities.py  database.py  draft_tender.py  exceptions.py  logs.py  notifications.py  organization.py  profile.py  questionnaire.py  schemas.py  session.py  tags.py  tender.py  user.py  verification.py
app/repositories/postgres/migration/: 1710349043_create_users_table.up.sql  1710349206_create_organiztions_table.up.sql  1710349538_create_logs_table.up.sql  1710401288_create_sessions_table.up.sql  1712141341_create_regions_table.up.sql  1712142599_regions_data_mg.up.sql  1712142600_cities_data_mg.up.sql  1712143741_create_tenders_objects_tags_table.down.sql  1712143741_create_tenders_objects_tags_table.up.sql  1712143741_create_tenders_tags_table.up.sql  1712144291_create_tender_table.up.sql  1712144300_create_tenders_services_tags_table.down.sql  1712144300_create_tenders_services_tags_table.up.sql  1712144301_create_tenders_objects_tags_table.down.sql  1712144301_create_tenders_objects_tags_table.up.sql  1712144484_tender_data_mg.up.sql  1712740237_create_questionnaire_table.down.sql  1712740237_create_questionnaire_table.up.sql  1713255870_create_notifications_table.up.sql  1713440260_create_draft_tender_table.down.sql  1713440260_create_draft_tender_table.up.sql  1713440406_create_draft_tenders_services_tags_table.down.sql  1713440406_create_draft_tenders_services_tags_table.up.sql  1713970535_create_draft_tenders_objects_tags_table.down.sql  1713970535_create_draft_tenders_objects_tags_table.up.sql  1714035045_create_document_type_table.up.sql  1714035067_create_documents_table.up.sql  1714035492_create_verification_requests_table.down.sql  1714035492_create_verification_requests_table.up.sql  1715173112_create_customer_profile.up.sql  1715174985_create_customer_location.down.sql  1715174985_create_customer_location.up.sql  1715174994_create_contractor_profile.down.sql  1715174994_create_contractor_profile.up.sql  (+16 more)
app/repositories/redis/: __init__.py  client.py
app/repositories/typesens/: client.py  tender.py
app/repositories/typesense/: __init__.py  contractor.py  schemas.py  tender.py
app/routers/v1/: auth.py  dadata.py  dependencies.py  exceptions.py  health.py  manager.py  organizations.py  questionnaire.py  role.py  suggest.py  tender.py  users.py  verification.py
app/schemas/: add_document.py  change_password.py  create_draft_tender.py  create_tender.py  exception.py  health.py  jwt_user.py  offer_tender.py  questionnaire.py  sign_up.py  sing_in.py  success.py  suggest.py  tender_count.py  tender_respond.py  upd_avatar.py  update_profile.py  verify_request.py  verify_status_set.py
app/schemas/models/: __init__.py  favorite_contractor.py  notification.py  organization.py  profile.py  questionnaire_answer.py  tender.py  tender_response.py  user.py  verification.py  verification_doc.py  verification_doc_type.py
app/services/: __init__.py  dadata.py  draft_tender.py  exceptions.py  jwt.py  logs.py  manager.py  notification.py  organiztion.py  questionnaire.py  session.py  suggest.py  tenders.py  user.py  user_service.py  verification.py
app/test/: conftest.py
app/test/services/: user_test.py
app/tests/: conftest.py
app/tests/services/: manager_test.py  tender_test.py  user_test.py
app/tools/: __init__.py  cache.py  egrul.py  json_csv.py
scripts/: cities_region_mg.py  cities_region_mg_typesense.py
(+50 files in other folders)
