[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["g0dm0d <ivan.berlin06@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
black = "^24.2.0"
flake8 = "^7.0.0"
uvicorn = "^0.27.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"
pydantic-extra-types = "^2.5.0"
phonenumbers = "^8.13.30"
pydantic = {extras = ["email"], version = "^2.6.1"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.2"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
dadata = "^21.10.1"
typesense = "^0.19.0"
asyncpg = "^0.29.0"
anyio = "^4.3.0"
pytest-asyncio = "^0.23.6"
prometheus-fastapi-instrumentator = "^7.0.0"
redis = "^5.0.4"
protobuf = "^5.26.1"
types-protobuf = "^5.26.0.20240422"
nats-py = "^2.7.2"
pyotp = "^2.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.9.0"
ruff = "^0.3.4"
pytest = "^8.1.1"
types-requests = "^2.31.0.20240406"

[tool.pytest.ini_options]
testpaths = [
    "./app/test",
]
asyncio_mode="auto"
pythonpath = [
  "./app"
]

[tool.mypy]
strict = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "test"

[tool.ruff]
exclude = ["password_recovery_pb2.py", "email_confirmation_pb2.py"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "Q"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
